# mediasoup-simplify

./: .gitignore  Readme.md  npm-scripts.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
node/lib/: Test.d.ts.map  Worker.d.ts  Worker.d.ts.map  Worker.js  index.d.ts  index.d.ts.map  index.js  types.d.ts  types.d.ts.map  types.js
node/src/: Channel.ts  PayloadChannel.ts  index.ts  worker.ts
node/tests/: test-Worker.js
worker/: Makefile  meson.build
worker/include/: Utils.hpp  Worker.hpp
worker/include/Channel/: ChannelRequest.hpp
worker/src/: Worker.cpp  lib.cpp
worker/src/Channel/: ChannelRequest.cpp
